fix code alignment
...was bugging me

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,6 +5,7 @@
     font-weight: normal;
     font-style: normal;
 }
+
 @font-face {
     font-family: 'poppinsmedium';
     src: url('https://log.sbond.co/fonts/poppins/poppins-medium-webfont.woff2') format('woff2'),
@@ -13,7 +14,7 @@
     font-style: normal;
 }
 
-html{
+html {
   scroll-behavior: smooth;
 }
 
@@ -23,36 +24,36 @@ body {
   text-rendering: optimizeLegibility;
 }
 
-html{
+html {
   line-height:1.15;
   -webkit-text-size-adjust:100%;
 }
 
-body::-webkit-scrollbar{
-    width: 1em;
+body::-webkit-scrollbar {
+  width: 1em;
 }
 
-body::-webkit-scrollbar-track{
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
 }
 
-body::-webkit-scrollbar-thumb{
+body::-webkit-scrollbar-thumb {
   background-color: rgba(0,0,0,.85);;
   outline: 1px solid slategrey;
 }
 
-.link:hover{
+.link:hover {
   fill: blue;
 }
 
-.pagination{
+.pagination {
   display: -ms-flexbox;
   display: flex;
   padding-left: 0;
   list-style: none;
 }
 
-.pagination a{
+.pagination a {
   color: black;
   border-radius: 5px;
   padding: 8px 16px;
@@ -60,14 +61,14 @@ body::-webkit-scrollbar-thumb{
   transition: background-color .25s;
 }
 
-.pagination a.active{
+.pagination a.active {
   background-color: #333;
   color: white;
 }
 
-.pagination a:hover:not(.active) {background-color: #ddd;}
+.pagination a:hover:not(.active) { background-color: #ddd; }
 
-.Image{
+.Image {
   overflow: hidden;
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
@@ -76,7 +77,7 @@ body::-webkit-scrollbar-thumb{
   display: inline-block;
 }
 
-.Banner{
+.Banner {
   padding-bottom: 0.5em;
   background-color: #313131;
   color: white;
@@ -86,20 +87,21 @@ body::-webkit-scrollbar-thumb{
   font-family: sans-serif;
 }
 
-.BannerText{
+.BannerText {
   margin: 0.75em 0.5em 0.5em 1em;
 }
 
-.nav-proj{
+.nav-proj {
   cursor: pointer;
 }
 
-.nav-proj-t{
-  padding-top: 13px;
-  padding-right: 20px;
+nav .menu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.opnav{
+.opnav {
   position: fixed;
   z-index: 1;
   top: 0;
@@ -111,35 +113,35 @@ body::-webkit-scrollbar-thumb{
   animation-fill-mode: forwards;
 }
 
-@media only screen and (max-width: 480px){
-  .opnav{
+@media only screen and (max-width: 480px) {
+  .opnav {
     height: 64px;
   }
 }
 
 .hamburger {
-    position: absolute;
-    display: none;
-    width: 1.6em;
-    height: 0.8em;
-    margin-right: 0.3em;
-    border-top: 0.2em solid #fff;
-    border-bottom: 0.2em solid #fff;
-    cursor: pointer;
-    right: 2em;
-    top: 28px;
+  position: absolute;
+  display: none;
+  width: 1.6em;
+  height: 0.8em;
+  margin-right: 0.3em;
+  border-top: 0.2em solid #fff;
+  border-bottom: 0.2em solid #fff;
+  cursor: pointer;
+  right: 2em;
+  top: 28px;
 }
 
 .hamburger:before {
-    content: "";
-    position: absolute;
-    top: 0.3em;
-    left: 0px;
-    width: 100%;
-    border-top: 0.2em solid #fff;
+  content: "";
+  position: absolute;
+  top: 0.3em;
+  left: 0px;
+  width: 100%;
+  border-top: 0.2em solid #fff;
 }
 
-.logo{
+.logo {
   position: absolute;
   background: white;
   color: black;
@@ -147,7 +149,7 @@ body::-webkit-scrollbar-thumb{
   right: 47%;
 }
 
-.logo-hidden{
+.logo-hidden {
   display: none;
 }
 
@@ -161,7 +163,7 @@ body::-webkit-scrollbar-thumb{
 .huerotate { filter: hue-rotate(180deg); }
 .rss.opacity { filter: opacity(50%); }
 
-.catList{
+.catList {
   list-style: none;
   list-style-position: inside;
   border-left: 2px solid;
@@ -171,7 +173,7 @@ body::-webkit-scrollbar-thumb{
   transition: all .8s ease;
 }
 
-.catList:hover{
+.catList:hover {
   transform: translateX(10px);
   border-radius: 5px;
   background: url(https://ul.sbond.co/i/gif/artgo.webp);
@@ -180,27 +182,27 @@ body::-webkit-scrollbar-thumb{
   cursor: pointer;
 }
 
-.catList:hover span{
+.catList:hover span {
   transition: all .5s ease;
   color: white;
   text-shadow: 2px 2px #000;
 }
 
-@media screen and (max-width: 1000px){
-  .opnav>.nav-hide{
+@media screen and (max-width: 1000px) {
+  nav .menu {
     display: none;
     height: 40px;
   }
-  .searchSVG{
+  .searchSVG {
     visibility: hidden;
   }
-  .hamburger{
+  .hamburger {
     display: grid;
   }
-  .logo-hidden{
+  .logo-hidden {
     display: block;
   }
-  .catList:hover{
+  .catList:hover {
     transform: translateX(10px);
     border-radius: 5px;
     background-image: url();
@@ -209,37 +211,42 @@ body::-webkit-scrollbar-thumb{
     background-position: center -15px;
     cursor: pointer;
   }
-  .catList:hover a{
+  .catList:hover a {
     transition: all .5s ease;
     color: black;
     text-shadow: none;
   }
 }
 
-@media screen and (max-width: 600px){
-  .navDisappear{
+@media screen and (max-width: 600px) {
+  .navDisappear {
     display: none;
   }
 }
 
-@media screen and (max-width: 200px){
-  .logo-hidden{
+@media screen and (max-width: 200px) {
+  .logo-hidden {
     display: none;
   }
 }
 
-.searchSVG{
+.searchSVG {
   display: block;
   margin: auto;
   position: relative;
-  float:right;
+  float: right;
   padding-left: 10px;
   padding-right: 10px;
-  top: -7px;
+  top: -23px;
   cursor: pointer;
+  fill: white;
 }
 
-.homeSearch{
+.searchSVG:hover {
+  fill: rgba(255, 255, 255, .5);
+}
+
+.homeSearch {
   -webkit-appearance: none;
   -moz-appearance: none;
   -ms-appearance: none;
@@ -257,11 +264,11 @@ body::-webkit-scrollbar-thumb{
   box-shadow: 2px 0px black;
 }
 
-.homeSearch:hover{
+.homeSearch:hover {
   box-shadow: 2px 2px black;
 }
 
-.search{
+.search {
   width: 100%;
   height: 3em;
   outline: none;
@@ -285,12 +292,12 @@ body::-webkit-scrollbar-thumb{
   animation-fill-mode: forwards;
 }
 
-@keyframes searchAnim{
+@keyframes searchAnim {
   from{ transform: translatey(-100px) }
 	to{ transform: translatey(64px) }
 }
 
-.hamburger-drop{
+.hamburger-drop {
   border: none;
   background: none;
   z-index: 1;
@@ -298,51 +305,50 @@ body::-webkit-scrollbar-thumb{
   left: 0;
   position: absolute;
   width: 100%;
-  padding-right: 50px;
   animation-name: hamburger-drop;
   animation-duration: 0.5s;
   animation-fill-mode: forwards;
 }
 
-@keyframes hamburger-drop{
+@keyframes hamburger-drop {
   from{ transform: translatey(-100px) }
 	to{ transform: translatey(106px) }
 }
 
-.hidden{
+.hidden {
   display: none;
 }
 
-@keyframes navmove{
+@keyframes navmove {
   from{ transform: translatey(-100px) }
 	to{ transform: translateX() }
 }
 
-html{
+html {
   animation-name: ulMove;
   animation-duration: 0.5s;
   animation-fill-mode: forwards;
 }
 
-@keyframes ulMove{
-  from{ transform: translatey(-100px) }
-	to{ transform: translateX() }
+@keyframes ulMove {
+  from { transform: translatey(-100px) }
+	to { transform: translateX() }
 }
 
-.footerSvgAnim{
+.footerSvgAnim {
   animation-name: svgMove;
   animation-duration: 1.1s;
   animation-fill-mode: forwards;
 }
 
-@keyframes svgMove{
-  from{ transform: translatex(-1000px) }
-	to{ transform: translateX() }
+@keyframes svgMove {
+  from { transform: translatex(-1000px) }
+	to { transform: translateX() }
 }
 
-body{margin:0;}
+body { margin:0;}
 
-.cat{
+.cat {
   background-color: black;
   border-width: 1px;
   border-style: solid;
@@ -360,14 +366,14 @@ body{margin:0;}
   top: -1.5px;
 }
 
-.cat:hover{
+.cat:hover {
   box-shadow: 2px 2px black;
   top: -2px;
   right: 2px;
   border-color: white;
 }
 
-.stat{
+.stat {
   float: left;
   padding-right: 50px;
   padding-top: 30px;
@@ -375,7 +381,7 @@ body{margin:0;}
   text-decoration: none;
 }
 
-.stat2{
+.stat2 {
   float: left;
   padding-right: 50px;
   padding-top: 30px;
@@ -386,10 +392,10 @@ body{margin:0;}
   animation-fill-mode: forwards;
 }
 
-@keyframes stats{
-  from{ transform: translateX(0) }
-  to{ transform: translateX(10px) }
-  0%   {
+@keyframes stats {
+  from { transform: translateX(0) }
+  to { transform: translateX(10px) }
+  0% {
     color: rgba(0, 0, 0, 0);
   }
   100% {
